crates/math-core/tests/snapshots/conversion_test__dots_implicit_trail.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "A B \\dots"
---
<math>
    <mi>A</mi>
    <mi>B</mi>
    <mo>.</mo>
    <mo lspace="0" rspace="0.1667em">.</mo>
    <mo lspace="0" rspace="0">.</mo>
</math>
