crates/math-core/tests/snapshots/conversion_test__dots_in_integral.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\int \\dots dx"
---
<math>
    <mo lspace="0">∫</mo>
    <mo lspace="0">.</mo>
    <mo lspace="0" rspace="0.1667em">.</mo>
    <mo lspace="0">.</mo>
    <mi>d</mi>
    <mi>x</mi>
</math>
