crates/math-core/tests/snapshots/conversion_test__dots_in_list_space.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "A,B,\\dots Z"
---
<math>
    <mi>A</mi>
    <mo>,</mo>
    <mi>B</mi>
    <mo>,</mo>
    <mo lspace="0">.</mo>
    <mo lspace="0" rspace="0.1667em">.</mo>
    <mo lspace="0">.</mo>
    <mi>Z</mi>
</math>
