crates/math-core/tests/snapshots/conversion_test__dots_in_subscript.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x_{\\ldots\\log}"
---
<math>
    <msub>
        <mi>x</mi>
        <mrow>
            <mo lspace="0" rspace="0">.</mo>
            <mo lspace="0" rspace="0">.</mo>
            <mo lspace="0">.</mo>
            <mrow><mspace/><mi>log</mi></mrow>
        </mrow>
    </msub>
</math>
